<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#292929"
    tools:context="com.coincalc.anduril.coincalculator.MainActivity">

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:itemIconTint="@color/drawer_item"
            app:itemTextColor="@color/drawer_item"
            app:menu="@menu/navigation" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9868582549220946/3842743606  ">
        </com.google.android.gms.ads.AdView>

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/bitcoin_textfield_xml"
            android:ems="10"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:textColor="#f9f9f9"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fee_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fee"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="240dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/textfield_fee_xml"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/fee_desc"
            android:inputType="number|numberDecimal"
            android:textColor="#f9f9f9"
            android:textColorHint="#f9f9f9"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/amt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/amt"
            android:textColor="#FF8C00"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fee_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/fee"
            android:textColor="#f9f9f9"
            app:layout_constraintBottom_toTopOf="@+id/fee"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/profit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_margin="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bitcoin_profit"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/def_val"
            android:textColor="#090909"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fee" />

        <TextView
            android:id="@+id/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/def_val_euro"
            android:textColor="#f9f9f9"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profit"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="84dp"
            android:layout_height="81dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/amt_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bitcoin_png48" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45"/>

        <Button
            android:id="@+id/calc"
            android:layout_width="141dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bitcoin_textfield_xml"
            android:text="@string/calc_text"
            android:textColor="#F8A33D"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/euro"
            app:layout_constraintVertical_bias="0.131" />

        <TextView
            android:id="@+id/fee_side"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/fee_side"
            android:textColor="#ffffff"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toEndOf="@+id/fee_text"
            app:layout_constraintTop_toBottomOf="@+id/amount" />

</android.support.constraint.ConstraintLayout>
